feat(codegen): comment support